nuevo sitio demo ome

--- a/.env
+++ b/.env
@@ -19,8 +19,8 @@
 #--------------------------------------------------------------------
 # APP
 #--------------------------------------------------------------------
-#app.baseURL = 'https://form.mundoeducativodigital.com/'
- app.baseURL = 'http://localhost/2021/cursos/ci4/omecms/ome/'
+#app.baseURL = 'https://demo.mundoeducativodigital.com/'
+ app.baseURL = 'http://localhost/2021/cursos/democms/'
 # app.forceGlobalSecureRequests = false
 
 # app.sessionDriver = 'CodeIgniter\Session\Handlers\FileHandler'
